ibm-ems-springboot/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ibm-ems-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ems.ibm.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ibm-ems-service
                port:
                  number: 80
